针对jdk9以上版本的支持改造