@@ -130,7 +130,7 @@ public class Oracle12Dialect implements Dialect {
 		if (hasOrderBy)
 			sql.append(") SAG_Paginationtable ");
 		sql.append(" fetch first ");
-		sql.append(new Double(topSize).intValue());
+		sql.append(Double.valueOf(topSize).intValue());
 		sql.append(" rows only");
 		if (sqlToyConfig.isHasFast())
 			sql.append(") ").append(sqlToyConfig.getFastTailSql());
@@ -442,7 +442,7 @@ public class Oracle12Dialect implements Dialect {
 	public QueryResult updateFetchRandom(SqlToyContext sqlToyContext, SqlToyConfig sqlToyConfig, String sql,
 			Object[] paramsValue, Integer random, UpdateRowHandler updateRowHandler, Connection conn,
 			final Integer dbType) throws Exception {
-		//throw new UnsupportedOperationException(SqlToyConstants.UN_SUPPORT_MESSAGE);
+		// throw new UnsupportedOperationException(SqlToyConstants.UN_SUPPORT_MESSAGE);
 		String realSql = sql + " order by dbms_random.random fetch first " + random + " rows only for update nowait";
 		return DialectUtils.updateFetchBySql(sqlToyContext, sqlToyConfig, realSql, paramsValue, updateRowHandler, conn,
 				0);
