@@ -185,7 +185,7 @@ public class SybaseIQDialect implements Dialect {
 			sql.append(") ").append(sqlToyConfig.getFastTailSql());
 		}
 		SqlToyResult queryParam = DialectUtils.wrapPageSqlParams(sqlToyContext, sqlToyConfig, queryExecutor,
-				sql.toString(), new Long(pageSize), (pageNo - 1) * pageSize);
+				sql.toString(), Long.valueOf(pageSize), (pageNo - 1) * pageSize);
 		return findBySql(sqlToyContext, sqlToyConfig, queryParam.getSql(), queryParam.getParamsValue(),
 				queryExecutor.getRowCallbackHandler(), conn, queryExecutor.getFetchSize(), queryExecutor.getMaxRows());
 	}
@@ -204,7 +204,7 @@ public class SybaseIQDialect implements Dialect {
 		if (sqlToyConfig.isHasFast())
 			sql.append(sqlToyConfig.getFastPreSql()).append(" (");
 		String minSql = sqlToyConfig.isHasFast() ? sqlToyConfig.getFastSql() : sqlToyConfig.getSql();
-		String partSql = " select top " + new Double(topSize).intValue() + " ";
+		String partSql = " select top " + Double.valueOf(topSize).intValue() + " ";
 		if (sqlToyConfig.isHasWith()) {
 			SqlWithAnalysis sqlWith = new SqlWithAnalysis(minSql);
 			sql.append(sqlWith.getWithSql());
